<resources>
    <string name="app_name">Beber H2O - Lembrete</string>
    <string name="hint_peso">Seu Peso (kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="txt_button_lembrete">Lembrete</string>
    <string name="txt_button_alarme">Alarme</string>
    <string name="txt_hora">00</string>
    <string name="txt_minuto">00</string>
    <string name="txt_dois_pontos">:</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua idade!</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de beber água!</string>

</resources>