<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ic_refresh"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/hint_peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_header" />

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_button_calcular"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="@drawable/bg_degrade_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_peso" />

    <View
        android:id="@+id/container_resultado_ml"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="@+id/container_resultado_ml"
        app:layout_constraintStart_toStartOf="@+id/container_resultado_ml"
        app:layout_constraintTop_toTopOf="@+id/container_resultado_ml" />

    <Button
        android:id="@+id/btn_lembrete"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/txt_button_lembrete"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado_ml" />

    <Button
        android:id="@+id/btn_alarme"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/txt_button_alarme"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado_ml" />

    <TextView
        android:id="@+id/txt_minuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_hora"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"
        app:layout_constraintTop_toTopOf="@+id/txt_hora" />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dois_pontos"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/container_resultado_ml"
        app:layout_constraintStart_toStartOf="@+id/container_resultado_ml"
        app:layout_constraintTop_toTopOf="@+id/txt_hora" />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/txt_minuto"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_dois_pontos"
        app:layout_constraintTop_toBottomOf="@+id/btn_lembrete" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>